[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/fonts/VCRosdNEUE.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/themes/kenneyUI-red.tres" type="Theme" id=2]
[ext_resource path="res://minigames/dividinghills/ui/HUDDH.gd" type="Script" id=3]
[ext_resource path="res://assets/hills/pickups/coinGold.png" type="Texture" id=4]
[ext_resource path="res://assets/hills/pickups/fuel.png" type="Texture" id=5]
[ext_resource path="res://assets/hills/time.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/pause.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/return.png" type="Texture" id=8]
[ext_resource path="res://assets/hills_cards/help_card.png" type="Texture" id=9]
[ext_resource path="res://assets/keyboardtouch/accordion-right.143x256.png" type="Texture" id=11]
[ext_resource path="res://assets/keyboardtouch/accordion-left.143x256.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=5]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.166667, 1, 0, 1 )
border_width_left = 2
border_width_top = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.333333, 0.333333, 0.333333, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.960784, 0, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=11]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.509804 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="DynamicFont" id=9]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 55
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="HUDDH" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Score" type="TextureRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="Score"]
margin_left = 64.0
margin_top = 16.0
margin_right = 104.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="Fuel" type="TextureRect" parent="."]
margin_left = 920.0
margin_top = 16.0
margin_right = 1000.0
margin_bottom = 96.0
texture = ExtResource( 5 )
expand = true

[node name="ProgressBar" type="ProgressBar" parent="Fuel"]
margin_left = -288.0
margin_top = 8.0
margin_right = -24.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 6 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
value = 100.0

[node name="Time" type="TextureRect" parent="."]
margin_left = 200.0
margin_top = 24.0
margin_right = 236.0
margin_bottom = 60.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="Time"]
margin_left = 48.0
margin_right = 75.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 250
custom_constants/margin_top = 150
custom_constants/margin_left = 250
custom_constants/margin_bottom = 150

[node name="Panel" type="Panel" parent="MarginContainer"]
visible = false
margin_left = 250.0
margin_top = 150.0
margin_right = 774.0
margin_bottom = 450.0
theme = SubResource( 2 )

[node name="MarginContainer" type="CenterContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
margin_left = 142.0
margin_top = 88.0
margin_right = 381.0
margin_bottom = 211.0
custom_constants/separation = 20

[node name="Question" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 239.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "Lore Ipsum Lore Ipsum
Lore Ipsum Lore Ipsum"
align = 1
valign = 1

[node name="Control" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 239.0
margin_bottom = 63.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 239.0
margin_bottom = 123.0
custom_constants/separation = 15

[node name="A" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 47.3241
margin_bottom = 40.251
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "A_1"

[node name="B" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 62.0
margin_right = 111.324
margin_bottom = 40.251
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "A_2"

[node name="C" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 126.0
margin_right = 175.324
margin_bottom = 40.251
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "A_3"

[node name="D" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 190.0
margin_right = 239.324
margin_bottom = 40.251
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "A_4"

[node name="Panel2" type="Panel" parent="MarginContainer"]
visible = false
margin_left = 250.0
margin_top = 150.0
margin_right = 774.0
margin_bottom = 450.0
theme = SubResource( 2 )

[node name="MarginContainer" type="CenterContainer" parent="MarginContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel2/MarginContainer"]
margin_left = 152.0
margin_top = 88.0
margin_right = 372.0
margin_bottom = 211.0
custom_constants/separation = 20

[node name="Feedback" type="Label" parent="MarginContainer/Panel2/MarginContainer/VBoxContainer"]
margin_right = 220.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "Lore Ipsum Lore Ipsum
Lore Ipsum Lore Ipsum"
align = 1
valign = 1

[node name="Control" type="Control" parent="MarginContainer/Panel2/MarginContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 220.0
margin_bottom = 63.0

[node name="Continue" type="Button" parent="MarginContainer/Panel2/MarginContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 220.0
margin_bottom = 123.251
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "Continue"

[node name="PauseBtn" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 944.0
margin_top = 520.0
margin_right = 1044.0
margin_bottom = 620.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 7 )
expand = true

[node name="ReturnBtn" type="TextureButton" parent="."]
pause_mode = 2
margin_top = 520.0
margin_right = 100.0
margin_bottom = 620.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 8 )
expand = true

[node name="PausedScreen" type="Panel" parent="."]
visible = false
margin_left = 144.0
margin_top = 120.0
margin_right = 868.0
margin_bottom = 520.0
theme = SubResource( 11 )
custom_styles/panel = SubResource( 12 )

[node name="CenterContainer" type="CenterContainer" parent="PausedScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PausedScreen/CenterContainer"]
margin_left = 158.0
margin_top = 17.0
margin_right = 566.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Label" type="Label" parent="PausedScreen/CenterContainer/VBoxContainer"]
margin_right = 408.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 9 )
text = "PAUSED!"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="PausedScreen/CenterContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 408.0
margin_bottom = 365.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="ResumeBtn" type="Button" parent="PausedScreen/CenterContainer/VBoxContainer"]
pause_mode = 2
visible = false
margin_top = 370.0
margin_right = 408.0
margin_bottom = 450.251
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "RESUME"

[node name="Node2D" type="Node2D" parent="."]

[node name="RightTouchBtn" type="TouchScreenButton" parent="Node2D"]
modulate = Color( 1, 1, 1, 0.4 )
position = Vector2( 960, 312 )
scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 11 )
action = "right"

[node name="LeftTouchBtn" type="TouchScreenButton" parent="Node2D"]
modulate = Color( 1, 1, 1, 0.4 )
position = Vector2( 24, 304 )
scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 12 )
action = "left"

[connection signal="button_up" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/A" to="." method="_on_A_button_up"]
[connection signal="button_up" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/B" to="." method="_on_B_button_up"]
[connection signal="button_up" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/C" to="." method="_on_C_button_up"]
[connection signal="button_up" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/D" to="." method="_on_D_button_up"]
[connection signal="button_up" from="MarginContainer/Panel2/MarginContainer/VBoxContainer/Continue" to="." method="_on_Continue_button_up"]
[connection signal="button_up" from="PauseBtn" to="." method="_on_PauseBtn_button_up"]
[connection signal="mouse_entered" from="PauseBtn" to="." method="_on_PauseBtn_mouse_entered"]
[connection signal="mouse_exited" from="PauseBtn" to="." method="_on_PauseBtn_mouse_exited"]
[connection signal="button_up" from="ReturnBtn" to="." method="_on_ReturnBtn_button_up"]
[connection signal="mouse_entered" from="ReturnBtn" to="." method="_on_ReturnBtn_mouse_entered"]
[connection signal="mouse_exited" from="ReturnBtn" to="." method="_on_ReturnBtn_mouse_exited"]
